--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ jobs:
     timeout-minutes: 5
     strategy:
       matrix:
-        python-version: [3.8]
+        python-version: [3.8, 3.7]
     steps:
       - uses: actions/checkout@v2
       - name: Setup Python
