--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ jobs:
     timeout-minutes: 5
     strategy:
       matrix:
-        python-version: [3.10, 3.11]
+        python-version: ['3.10', 3.11]
     steps:
       - uses: actions/checkout@v2
       - name: Setup Python
