only using python 3.10 for now

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist=py3.10,py3.11
+envlist=py3.10
 skipdist=True
 
 [base]
@@ -17,6 +17,7 @@ commands=
 [testenv]
 deps=
   {[base]deps}
+basepython = python3.10
 commands=
   {[base]commands}
   pytest --cov-report term-missing --cov=elexsolver
