--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,6 +4,8 @@ jobs:
   test:
     name: Run unit tests
     runs-on: ubuntu-latest
+    env:
+	PYTENSOR_FLAGS: floatX=float64,gcc__cxxflags='-march=native'
     timeout-minutes: 15
     strategy:
       matrix:
