Asking pylint to ignore missing-module-docstring

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,4 +6,4 @@ max-line-length = 160
 
 [pylint]
 max-line-length = 160
-disable = invalid-name, duplicate-code, missing-function-docstring, too-many-instance-attributes, too-many-arguments, too-many-locals
+disable = invalid-name, duplicate-code, missing-function-docstring, too-many-instance-attributes, too-many-arguments, too-many-locals, missing-module-docstring
